# crc

./: CMakeLists.txt  README.md
include/: crc.c  crc.h
src/: crc.c
